--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ keywords: "workshops, websites, gh-pages, jekyll"
 featured-image: "/images/the_harvest.jpg"
 
 # author name, displayed in credits
-author: aweymo
+author: Andrew Weymouth
 # year or date published, displayed in sidebar
 publication_year: 2023
 # location of code, the full url to your github repository
